--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pydantic = "^1.5.1"
 
 [tool.poetry.dev-dependencies]
 django-dotenv = "^1.4.2"
+django-extensions = "^2.2.9"
 
 [build-system]
 requires = ["poetry>=0.12"]
