--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,12 @@
 [tool.poetry]
-name = "django-cloud-tasks"
+name = "tasks"
 version = "0.1.0"
 description = ""
 authors = ["jjorissen52 <jjorissen52@gmail.com>"]
 license = "MIT"
+
+[tool.poetry.scripts]
+cloud-tasks = "tasks.cli:main"
 
 [tool.poetry.dependencies]
 python = "^3.6"
