--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ google-cloud-tasks = "^1.5.0"
 google-cloud-scheduler = "^1.2.1"
 pydantic = "^1.5.1"
 fire = {version = "^0.3.1", optional = true}
+pygments = "^2.6.1"
 
 [tool.poetry.extras]
 cli = ["fire"]
