--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,11 @@ description = ""
 authors = ["jjorissen52 <jjorissen52@gmail.com>"]
 license = "MIT"
 packages = [
-    { include = "tasks" }
+    { include = "cloud_tasks" }
 ]
 
 [tool.poetry.scripts]
-cloud-tasks = "tasks.cli:main"
+cloud-tasks = "cloud_tasks.cli:main"
 
 [tool.poetry.dependencies]
 python = "^3.6"
